@@ -11,3 +11,6 @@ pyexcel_xlsx
 pyexcel_text
 pyexcel_io
 tweepy
+matplotlib
+networkx
+decorator
