@@ -4,6 +4,9 @@ For more information, check the README.md in <http://github.com/i3visio/osrframe
 - Created a osrframework/api folder where all the wrappers to each platform will be included.
 - Considered in platforms.py the chance of using the API if, both, a wrapper exists and the appropriate authentication methods have been provided.
 - Added a Twitter API wrapping the credentials in config_api_credentials.py to make use of Tweepy API.
+- Added networkx library to store the information in a graph format: png and gml have been added.
+- A hack has been used to avoid encoding problems when exporting data.
+- An issue has been detected: python-networkx and python-decorator in Debian-based OS is a problem because they are not up-to-date. Installation from pip is required.
 
 0.9.3, 2015/08/28 -- Storing the information of mailfy, entify and phonefy files.
 - Updating the export primitives of the entify, mailfy and phonefy files.
